10-Jan-2012 Opus.Core.File.GetFiles will no longer throw an exception when no files match the pattern used. A detail log message is output instead.

10-Jan-2012 DirectXSDK package will now throw a sensible exception if the SDK is not installed.

09-Jan-2012 VisualStudio projects for C application/dynamic library/static library with no input files are no longer generated.

09-Jan-2012 Native build C link or archive steps no longer throw an exception when there are no input files. A detail message is output, however.

09-Jan-2012 Improved exception message when a package is failed to be located in any package root.

09-Jan-2012 Issue 54. Relative package roots now work correctly. Internally they are converted to absolute paths.

08-Jan-2012 VS2010 project URIs could fail to be generated when they were relative paths.

08-Jan-2012 Guarding against calling System.Uri.MakeRelativeUri for relative URIs

08-Jan-2012 VS2010 project file generation with 'UniqueIdentifiers' now write out GUIDs in upper case for consistency.

08-Jan-2012 Issue 53. Fixing formatting of package debug project GUID so that Monodevelop generated solutions will open successfully after an initial save.

08-Jan-2012 Fixing generation of package debug projects, which used an incorrect token for the 'Any CPU' platform.

24-Dec-2011 Multiplatform Windows VisualStudio project generation will now enable builds for more than just the first platform specified, e.g. if -platforms=win32;win64 then only win32 would build in the IDE previously.

22-Dec-2011 Reordering library link order so that project libraries come first, then specified external libraries, then system libraries. This appears to resolve inter-dynamic-library dependencies in Gcc-4.5 upwards when --as-needed is specified to ld.

21-Dec-2011 Fixing system include paths for Gcc-4.4, 4.5 and 4.6 for Ubuntu 11.10.

21-Dec-2011 Adding Gcc-4.5 support for Linux. A new include path under /usr/include needed to be added.
